--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,5 +34,6 @@ jobs:
     - name: Test with pytest
       run: |
         python setup.py bdist_wheel
+        ls dist
         pip install dist/*.whl
         pytest
