--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,11 +25,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        python setup.py bdist_wheel
-        echo "XXXXXXX"
-        ls dist
-        echo "XXXXXXX"
-        pip install dist/*.whl
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -38,4 +33,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        export PYTHONPATH=.
         pytest
